# tpysui

./: .gitignore  CHANGELOG.md  Pipfile  pyproject.toml
docs/: tpysui.rst
src/tpysui/: version.py
src/tpysui/modals/: __init__.py  pyconfig_popup.py
src/tpysui/screens/: configs.py
src/tpysui/widgets/: editable_table.py
